lanecwe-Prod/src/objects/PGIServicesInformation__c.object
<CustomObject>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deutsch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nederlands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Svenska</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>pgi_Legal_Selling_Entity__c</fullName>
        <defaultValue>false</defaultValue>
        <label>pgi_Legal Selling Entity</label>
        <type>Checkbox</type>
    </fields>
    <label>Contract General Content</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>PGIPDFServicesInformation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contract General Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>